// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleComponentTest render expanded with content-class-name 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <mock-customizedactionbutton
      aria-expanded="true"
      classname="collapsible"
      iconprops="[object Object]"
    >
      <div>
        Some header
      </div>
    </mock-customizedactionbutton>
    <div
      class="content-class-name collapsibleContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentTest render expanded without content-class-name 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <mock-customizedactionbutton
      aria-expanded="true"
      classname="collapsible"
      iconprops="[object Object]"
    >
      <div>
        Some header
      </div>
    </mock-customizedactionbutton>
    <div
      class="collapsibleContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentTest render with container-class-name 1`] = `
<DocumentFragment>
  <div
    class="a-container"
  >
    <mock-customizedactionbutton
      aria-expanded="true"
      classname="collapsible"
      iconprops="[object Object]"
    >
      <div>
        Some header
      </div>
    </mock-customizedactionbutton>
    <div
      class="collapsibleContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentTest render without container-class-name 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <mock-customizedactionbutton
      aria-expanded="true"
      classname="collapsible"
      iconprops="[object Object]"
    >
      <div>
        Some header
      </div>
    </mock-customizedactionbutton>
    <div
      class="collapsibleContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;
